third_party/move/move-compiler-v2/tests/recursive-instantiation-checker/v1-tests/mutually_recursive_two_args_swapping_type_con.exp

Diagnostics:
error: cyclic type instantiation
  ┌─ tests/recursive-instantiation-checker/v1-tests/mutually_recursive_two_args_swapping_type_con.move:4:9
  │
4 │     fun f<T1, T2, T3>() {
  │         ^
  │
  = `f<T1, T2, T3>` calls `g<T2, T1>` at tests/recursive-instantiation-checker/v1-tests/mutually_recursive_two_args_swapping_type_con.move:4
  = `g<T2, T1>` calls `f<T2, M::S<T1>, u64>` at tests/recursive-instantiation-checker/v1-tests/mutually_recursive_two_args_swapping_type_con.move:5,
    A cycle of recursive calls causes the instantiation to recurse infinitely.

error: cyclic type instantiation
  ┌─ tests/recursive-instantiation-checker/v1-tests/mutually_recursive_two_args_swapping_type_con.move:8:9
  │
8 │     fun g<T1, T2>() {
  │         ^
  │
  = `g<T1, T2>` calls `f<T1, M::S<T2>, u64>` at tests/recursive-instantiation-checker/v1-tests/mutually_recursive_two_args_swapping_type_con.move:8
  = `f<T1, M::S<T2>, u64>` calls `g<M::S<T2>, T1>` at tests/recursive-instantiation-checker/v1-tests/mutually_recursive_two_args_swapping_type_con.move:9,
    A cycle of recursive calls causes the instantiation to recurse infinitely.
